jupyter notebook to py files

--- a/old_script.ipynb
+++ b/old_script.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Transformation import Transformation\n",
+    "from transformation import Transformation\n",
     "import numpy as np\n",
     "# from sklearn.neighbors import NearestNeighbors\n",
     "import networkx as nx\n",
